# servicemanagement-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_smoke.rs  02_authorization.rs  03_sm_app_service_status.rs  04_main_app.rs  05_agent_service.rs  06_daemon_service.rs  07_login_item.rs  08_sm_login_item_legacy.rs  09_sm_job_bless_legacy.rs  10_async_unregister.rs
src/: agent_service.rs  app_service.rs  authorization.rs  bridge.rs  cf.rs  daemon_service.rs  error.rs  ffi.rs  legacy.rs  lib.rs  login_item.rs  main_app.rs  sm_app_service.rs  sm_app_service_status.rs  sm_job_bless.rs  sm_login_item.rs
src/async_api/: mod.rs
swift-bridge/: Package.swift
swift-bridge/Sources/ServiceManagementBridge/: AgentService.swift  AppServiceBridge.swift  Authorization.swift  Core.swift  DaemonService.swift  LoginItem.swift  MainApp.swift  SMAppService.swift  SMAppServiceStatus.swift  SMJobBless.swift  SMLoginItem.swift
tests/: agent_service_tests.rs  async_api_tests.rs  authorization_tests.rs  daemon_service_tests.rs  login_item_tests.rs  main_app_tests.rs  sm_app_service_status_tests.rs  sm_app_service_tests.rs  sm_job_bless_tests.rs  sm_login_item_tests.rs
